# rtsp_streamer

./: CMakeLists.txt
Testing/: test.cpp
src/: details.txt
src/mock_client/: client.cpp
src/server/: main.cpp
